--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#D3D3D3</color>
+    <color name="crimson">#b64157</color>
+    <color name="cimsonD">#923345</color>
+    <color name="cimsonL">#d14c65</color>
 </resources>
