--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -8,6 +8,7 @@
     tools:context=".RecipePage">
 
     <FrameLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="106dp"
         app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
@@ -22,18 +23,27 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rectangle"/>
 
-        <EditText
-            android:id="@+id/search"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
-            android:layout_height="43dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginTop="36dp"
-            android:background="@drawable/rounded_rectangle"
-            android:ems="10"
-            android:hint="Search"
-            android:inputType="text"
-            android:paddingStart="6dp" />
+            app:hintEnabled="false"
+            app:boxBackgroundColor="@color/white"
+            app:hintTextColor="@color/black">
+
+        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            android:id="@+id/searchAutoComplete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:completionThreshold="1"
+            android:padding="12dp"
+            android:hint="Search..."
+            android:backgroundTint="@color/white"
+            android:popupBackground="@color/white"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
     </FrameLayout>
 
@@ -421,4 +431,5 @@
             </LinearLayout>
         </GridLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
