naa nay firebase, ug mga pages

--- a/app/src/main/res/layout/activity_bicolexpress.xml
+++ b/app/src/main/res/layout/activity_bicolexpress.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/back9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="159dp"
-        android:layout_marginTop="209dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="634dp"
-        android:text="Button"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="316dp"
+        android:layout_marginBottom="827dp"
+        android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
