--- a/app/src/main/res/layout/activity_chickenadobo.xml
+++ b/app/src/main/res/layout/activity_chickenadobo.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/back2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="126dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="646dp"
-        android:text="OTEN DAKO LONGANISA"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="307dp"
+        android:layout_marginBottom="827dp"
+        android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
