--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,9 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
+
     <group android:checkableBehavior="single">
-            <item
-                android:id="@+id/my_recipes"
-                android:title="My Recipes"/>
+        <item
+            android:id="@+id/my_recipes"
+            android:title="My Recipes"/>
     </group>
+
+    <item android:title="Actions">
+        <menu>
+            <item
+                android:id="@+id/nav_logout"
+                android:title="Logout" />
+        </menu>
+    </item>
 </menu>
