--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:padding="32dp"
-    android:background="#FFFFFF"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -25,7 +24,7 @@
         android:text="Welcome Back!"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="#C85353"
+        android:textColor="@color/crimsonD"
         android:layout_marginBottom="40dp"/>
 
     <EditText
@@ -71,8 +70,8 @@
         android:text="LOG IN"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:backgroundTint="#C85353"
-        android:textColor="#FFFFFF" />
+        android:backgroundTint="@color/crimson"
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/signup_link"
@@ -82,7 +81,7 @@
         android:clickable="true"
         android:focusable="true"
         android:text="New user? Register Here"
-        android:textColor="#C85353"
+        android:textColor="@color/crimson"
         android:textSize="14sp" />
 
 </LinearLayout>
